# energyc_renderer

./: .gitignore  CMakeLists.txt
assets/: cube.mtl  sphere.mtl
shaders/: equirectangular_projection.frag  equirectangular_projection.vert  light_source.frag  light_source.vert  post_process.frag  quad.vert  quad_blur.frag  solid.frag  solid.vert
shaders/spir-v/: equirectangular_projection_frag.spv  equirectangular_projection_vert.spv  light_source_frag.spv  light_source_vert.spv  post_process.spv  quad.spv  quad_blur.spv  solid_frag.spv  solid_vert.spv
sources/: CMakeLists.txt  CommandManager.cpp  CommandManager.h  RendererApplication.cpp  RendererApplication.h  SyncManager.cpp  SyncManager.h  main.cpp
sources/managers/: CommandManager.cpp  CommandManager.h  DescriptorManager.cpp  DescriptorManager.h  EnergycRenderer.cpp  EnergycRenderer.h  MaterialManager.cpp  MaterialManager.h  RendererApplication.cpp  RendererApplication.h  SyncManager.cpp  SyncManager.h
sources/other/: Camera.cpp  Camera.h  Timer.h  UserController.cpp  UserController.h  Window.cpp  Window.h
sources/render/: RenderManager.cpp  RenderManager.h  RenderUnitBase.h  RenderUnitSolid.cpp  RenderUnitSolid.h  RendererGui.cpp  RendererGui.h  RendererLight.cpp  RendererLight.h  RendererSolid.cpp  RendererSolid.h
sources/render/RenderUnit/: RenderUnitEquirectangularProj.cpp  RenderUnitEquirectangularProj.h  RenderUnitPostProcess.cpp  RenderUnitPostProcess.h  RenderUnitSolid.cpp  RenderUnitSolid.h
sources/render/Renderer/: RendererBase.h  RendererBlur.cpp  RendererBlur.h  RendererEquirectangularProj.cpp  RendererEquirectangularProj.h  RendererGui.cpp  RendererGui.h  RendererLight.cpp  RendererPostProcess.cpp  RendererPostProcess.h  RendererSolid.cpp  RendererSolid.h
sources/render_units/: RenderUnitBase.h  RenderUnitSolid.cpp  RenderUnitSolid.h  RendererBase.h  RendererSolid.cpp  RendererSolid.h
sources/scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
sources/tools/: Core.cpp  Core.h  Utils.cpp  Utils.h  VulkanDataObjects.cpp  VulkanDataObjects.h
